--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 
 .header-part > a {
   text-decoration: none;
-  background-color: teal;
+  background-color: #f15b5b;
 
   padding: 15px 25px;
   margin-top: 25px;
@@ -62,15 +62,72 @@
   margin: 150px 0;
 }
 
-.donate-today > h1{
-    font-size: 60px;
+.donate-today > h1 {
+  font-size: 60px;
 }
 
-.donate-today > p{}
+.donate-today > p {
+  text-align: center;
+  margin: 30px 0;
+
+  font-size: 18px;
+  letter-spacing: 1px;
+}
 
 .donate-many {
-    display: flex;
-    justify-content: center;
-  }
+  display: flex;
+  justify-content: center;
+  margin: 30px 0;
+}
+
+.donate-many > h1 {
+  background-color: rgb(250, 247, 244);
+  padding: 50px 30px;
+
+  color: rgb(94, 90, 90);
+  margin-right: 25px;
+
+  font-size: 40px;
+  border-radius: 5px;
+}
+
+.donate-many > .donate-active {
+  background-color: #f1e5e5;
+  color: #f15b5b;
+
+  border: 3px solid #f15b5b;
+}
+
+.donate-today > input {
+  margin: 30px 0;
+  border: none;
+
+  border-bottom: 2px solid rgb(187, 180, 180);
+  outline: none;
+
+  width: 60%;
+  text-align: center;
+
+  line-height: 30px;
+  font-size: 20px;
+
+  font-weight: 500;
+}
+
+.donate-today > a {
+  text-decoration: none;
+  background-color: #f15b5b;
+
+  padding: 15px 25px;
+  margin-top: 25px;
+
+  font-weight: bold;
+  color: #fff;
+
+  letter-spacing: 1px;
+  font-size: 25px;
+
+  border-radius: 5px;
+}
 
 /* donate section start */
