--- a/style.css
+++ b/style.css
@@ -130,4 +130,85 @@
   border-radius: 5px;
 }
 
-/* donate section start */
+/* donate section end */
+
+/* donate plan start */
+
+.donate-plan {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  width: 80%;
+
+  margin: 0 auto;
+}
+
+.donate-plan > h1 {
+  font-size: 55px;
+}
+
+.donate-plan > p {
+  margin: 30px 0;
+  text-align: center;
+
+  font-size: 18px;
+}
+
+.donate-card {
+  display: flex;
+  margin-bottom: 200px;
+}
+
+.card1 {
+  background-color: #c3dee0;
+  margin: 10px;
+
+  padding: 65px 20px;
+  border-radius: 5px;
+}
+
+.card1 > h1 {
+  margin: 20px 0;
+}
+
+.card1 > p {
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+
+.card2 {
+  background-color: #edd3d3;
+  margin: 10px;
+
+  padding: 65px 20px;
+  border-radius: 5px;
+}
+
+.card2 > h1 {
+  margin: 20px 0;
+}
+
+.card2 > p {
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+
+.card3 {
+  background-color: #f7eac9;
+  margin: 10px;
+
+  padding: 65px 20px;
+  border-radius: 5px;
+}
+
+.card3 > h1 {
+    margin: 20px 0;
+}
+
+.card3 > p {
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+
+/* donate plan end */
