--- a/style.css
+++ b/style.css
@@ -212,3 +212,35 @@
 }
 
 /* donate plan end */
+
+/* footer start */
+
+.footer {
+    background-color: #0d0f16;
+    display: flex;
+    flex-direction: column;
+    
+    justify-content: center;
+    align-items: center;
+
+    height: 200px;
+    width: 100vw;
+
+    color: #fff;
+}
+
+.footer > h1 {
+    font-family: 'Lobster', cursive;
+    color: #f15b5b;
+
+    letter-spacing: 1px;
+}
+
+.footer > p {
+    font-size: 18px;
+    margin-top: 15px;
+
+    letter-spacing: 1px;
+}
+
+/* footer start */
