--- a/style.css
+++ b/style.css
@@ -213,6 +213,60 @@
 
 /* donate plan end */
 
+/* form start */
+
+.my-update {
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    margin-bottom: 150px;
+}
+
+.my-update > h1 {
+    font-size: 55px;
+}
+
+.my-update > p {
+    text-align: center;
+    font-size: 18px;
+    
+    margin: 20px 0;
+}
+
+.my-update > .input {
+    background-color: #edd3d3;
+    padding: 100px 200px;
+}
+
+.my-update > .input > input {
+    outline: none;
+    border: none;
+
+    height: 50px;
+    width: 300px;
+
+    padding-left: 15px;
+    font-weight: 600;
+    
+    font-size: 20px;
+    letter-spacing: 1px;
+
+    border-radius: 5px 0px 0px 5px;
+}
+
+.my-update > .input > a {
+    text-decoration: none;
+    background-color: #f15b5b;
+    display: inline-block;
+
+    padding: 17px 40px;
+    
+    
+}
+
+/* form end */
+
 /* footer start */
 
 .footer {
