--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
   justify-content: center;
   align-items: center;
 
-  margin: 150px 0;
+  margin: 100px 0;
 }
 
 .donate-today > h1 {
@@ -203,7 +203,7 @@
 }
 
 .card3 > h1 {
-    margin: 20px 0;
+  margin: 20px 0;
 }
 
 .card3 > p {
@@ -216,53 +216,53 @@
 /* form start */
 
 .my-update {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    align-items: center;
-    margin-bottom: 150px;
+  align-items: center;
+  margin-bottom: 100px;
 }
 
 .my-update > h1 {
-    font-size: 55px;
+  font-size: 55px;
 }
 
 .my-update > p {
-    text-align: center;
-    font-size: 18px;
-    
-    margin: 20px 0;
+  text-align: center;
+  font-size: 18px;
+
+  margin: 20px 0;
 }
 
 .my-update > .input {
-    background-color: #edd3d3;
-    padding: 100px 200px;
+  background-color: #edd3d3;
+  padding: 100px 200px;
+
+  border-radius: 5px;
 }
 
 .my-update > .input > input {
-    outline: none;
-    border: none;
+  outline: none;
+  border: none;
 
-    height: 50px;
-    width: 300px;
+  height: 50px;
+  width: 300px;
 
-    padding-left: 15px;
-    font-weight: 600;
-    
-    font-size: 20px;
-    letter-spacing: 1px;
+  padding-left: 15px;
+  font-weight: 600;
 
-    border-radius: 5px 0px 0px 5px;
+  font-size: 20px;
+  letter-spacing: 1px;
+
+  border-radius: 5px 0px 0px 5px;
 }
 
 .my-update > .input > a {
-    text-decoration: none;
-    background-color: #f15b5b;
-    display: inline-block;
+  text-decoration: none;
+  background-color: #f15b5b;
+  display: inline-block;
 
-    padding: 17px 40px;
-    
-    
+  padding: 17px 40px;
 }
 
 /* form end */
@@ -270,31 +270,31 @@
 /* footer start */
 
 .footer {
-    background-color: #0d0f16;
-    display: flex;
-    flex-direction: column;
-    
-    justify-content: center;
-    align-items: center;
+  background-color: #0d0f16;
+  display: flex;
+  flex-direction: column;
 
-    height: 200px;
-    width: 100vw;
+  justify-content: center;
+  align-items: center;
 
-    color: #fff;
+  height: 200px;
+  width: 100vw;
+
+  color: #fff;
 }
 
 .footer > h1 {
-    font-family: 'Lobster', cursive;
-    color: #f15b5b;
+  font-family: "Lobster", cursive;
+  color: #f15b5b;
 
-    letter-spacing: 1px;
+  letter-spacing: 1px;
 }
 
 .footer > p {
-    font-size: 18px;
-    margin-top: 15px;
+  font-size: 18px;
+  margin-top: 15px;
 
-    letter-spacing: 1px;
+  letter-spacing: 1px;
 }
 
 /* footer start */
