--- a/style.css
+++ b/style.css
@@ -213,6 +213,62 @@
 
 /* donate plan end */
 
+/* card section start */
+
+.card-section {
+  display: flex;
+  width: 80%;
+
+  margin: 0 auto;
+  margin-top: 15px;
+}
+
+.card-section > .card-one {
+  width: 50%;
+}
+
+.card-section > .card-one > img {
+  border-radius: 5px;
+}
+
+.card-section > .card-two {
+  width: 50%;
+}
+
+.card-section > .card-two h1 {
+  font-size: 60px;
+  font-weight: 800;
+}
+
+.card-section > .card-two p {
+  margin: 20px 0;
+  font-size: 18px;
+
+  letter-spacing: 1px;
+  color: #857777;
+
+  font-weight: 500;
+}
+
+.card-section > .card-two a {
+  display: inline-block;
+  background-color: #f15b5b;
+  padding: 15px 30px;
+
+  margin-bottom: 150px;
+  color: #fff;
+
+  text-decoration: none;
+  font-size: 22px;
+
+  font-weight: 600;
+  letter-spacing: 1px;
+
+  border-radius: 5px;
+}
+
+/* card section end */
+
 /* form start */
 
 .my-update {
